--- a/fitness pictures.html
+++ b/fitness pictures.html
@@ -7,18 +7,18 @@
 <body>
     <h1>My fitness journey Pictorial progress</h1>
     <hr />
-    <img src="./assets/image/at the gym.jpg" height="300"/>
-    <img src="./assets/image/back.jpg" height="300"/>
-    <img src="./assets/image/backdown.jpg" height="300"/>
-    <img src="./assets/image/crazy.jpg" height="300"/>
-    <img src="./assets/image/down.jpg" height="300"/>
-    <img src="./assets/image/dumbell.jpg" height="300"/>
-    <img src="./assets/image/good.jpg" height="300"/>
-    <img src="./assets/image/porsing.jpg" height="300"/>
-    <img src="./assets/image/seatups.jpg" height="300"/>
-    <img src="./assets/image/showoff.jpg" height="300"/>
-    <img src="./assets/image/shulders.jpg" height="300"/>
-    <img src="./assets/image/dumbell.jpg" height="300"/>
+    <img src="assets/image/at the gym.jpg" height="300"/>
+    <img src="assets/image/back.jpg" height="300"/>
+    <img src="assets/image/backdown.jpg" height="300"/>
+    <img src="assets/image/crazy.jpg" height="300"/>
+    <img src="assets/image/down.jpg" height="300"/>
+    <img src="assets/image/dumbell.jpg" height="300"/>
+    <img src="assets/image/good.jpg" height="300"/>
+    <img src="assets/image/porsing.jpg" height="300"/>
+    <img src="assets/image/seatups.jpg" height="300"/>
+    <img src="assets/image/showoff.jpg" height="300"/>
+    <img src="assets/image/shulders.jpg" height="300"/>
+    <img src="assets/image/dumbell.jpg" height="300"/>
     <hr /> 
 </body>
 </html>
