--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <h3></body>INSTITUTIONS ATTENDED WITH DATES AND QUALIFICATIONS </h3>
     <ul>  
-<img src="./assets/image/passport.JPG" alt="passport.jpg" style="float: right;" height="120" width="100"></li>
+<img src="assets/image/passport.JPG" alt="passport.jpg" style="float: right;" height="120" width="100"></li>
 <li>South land international school Aba                                 -   (2004-2009)
 <li>Pacific Computer and management college	                            -   (2010)
 <li>University of Calabar	                                            -   (2015-2020) 
