--- a/physical fitness.html
+++ b/physical fitness.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Fitness and Wellness </h2>
-    <img src="./assets/image/Ernest.jpg" height="400"/>
+    <img src="assets/image/Ernest.jpg" height="400"/>
     <h3><a href= "./fitness pictures.html"> Fitness</a></h3>
     <P>Fitness ia the condition of being physically fit and healthy. Note: disease and lack of fitness are cosely related,<br />
          on the othe hand Wellness will be talked about below.
