--- a/wellness.html
+++ b/wellness.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>Wellness</h1>
-    <img src="./assets/image/going.jpg" height="500"/>
-   <img src="./assets/image/position.jpg" height="500"/>
-   <img src="./assets/image/styles.jpg" height="500"/>
+    <img src="assets/image/going.jpg" height="500"/>
+   <img src="assets/image/position.jpg" height="500"/>
+   <img src="assets/image/styles.jpg" height="500"/>
 </body>
 </html>
