--- a/fitness pictures.html
+++ b/fitness pictures.html
@@ -7,8 +7,8 @@
 <body>
     <h1>My fitness journey Pictorial progress</h1>
     <hr />
-    <img src="assets/image/at the gym.jpg" height="300"/>
-    <img src="assets/image/back.jpg" height="300"/>
+    <img src="./assets/image/at the gym.jpg" height="300"/>
+    <img src="./assets/image/back.jpg" height="300"/>
     <img src="assets/image/backdown.jpg" height="300"/>
     <img src="assets/image/crazy.jpg" height="300"/>
     <img src="assets/image/down.jpg" height="300"/>
